<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <EditText
        android:id="@+id/numar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_title"
        android:inputType="textCapCharacters">

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/marca"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_marca"
        android:inputType="textMultiLine|textCapWords"></EditText>

    <EditText
        android:id="@+id/tipul"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_type"
        android:inputType="textMultiLine"></EditText>

    <EditText
        android:id="@+id/data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/data_inmatricularii"
        android:inputType="date"></EditText>

    <EditText
        android:id="@+id/sofer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/sofer"
        android:inputType="textCapWords">

    </EditText>

    <LinearLayout
        android:id="@+id/layout_button_add"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:weightSum="3">/>
    </LinearLayout>


</LinearLayout>